--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@ tw-story {
 
 Most of the girls are honest (with you at least), but there&#39;s always one or two who feel entitled to everyone else&#39;s stuff. (click-append: &quot;stuff&quot;) [: g-strings, costumes, eyeliner, lipstick, money, partners]
 
-
 Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="2" name="slide right to answer" tags="" position="410,276" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
 
 &quot;Can you please try those on over your G?&quot; you call out to Bambi on Stilts. She stares blankly, not comprehending the basic rules dressing room etiquette.
@@ -67,6 +66,7 @@ You tell her that it&#39;s probably just X, your erstwhile boyfriend.
 
 Do you [[panic because of what happened the other week]] or offer to [[call X]] to find out for sure?</tw-passagedata><tw-passagedata pid="3" name="panic because of what happened the other week" tags="" position="452,390" size="100,100">Tramp&#39;s not your usual scene, but you go there with Jade and X to watch your friend spin the decks. There&#39;s MDMA going around in the water bottles, some marijuana in the cigarettes. Nothing out of the ordinary for a Sunday night. X is convinced that you&#39;re on something he&#39;s not, so he searches your purse for pills and finds nothing. He swears he sees you giving your number out to other guys, so he searches your phone and finds nothing. 
 
+&lt;img src=&quot;img/tramp.png&quot; alt=&quot;party girls at Tramp&quot; /&gt;
 
 Your edges are blurred, a bit warm and fuzzy, so you shake off X&#39;s possessiveness and continue dancing, trying not to let his paranoia kill the vibe. 
 
@@ -119,20 +119,19 @@ Words etched in your neuropathways.
 (live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
 (live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
 
-[[You expect to feel...]]</tw-passagedata><tw-passagedata pid="6" name="having something stolen" tags="" position="567,156" size="100,100">Karla is owned by a boxer from Sydney, or at least that&#39;s how it appears from the way she has to sneak around to have any semblence of a life. I love her and Carmella immediately when they catch and call out the girl who rips an outfit off my rack and hides it away without payment. 
+[[You expect to feel...]]</tw-passagedata><tw-passagedata pid="6" name="having something stolen" tags="" position="567,156" size="100,100">Karla is owned by a boxer from Sydney, or at least that&#39;s how it appears from the way she has to sneak around to have any semblence of a life. You love her and Carmella immediately when they catch and call out the girl who rips an outfit off your rack and hides it away without payment. 
 
 
-Karla buys Ed Hardy hoodies and dresses from me. (click-replace: &quot;hoodies and dresses&quot;) [shit] The bikies love it.
+Karla buys Ed Hardy hoodies and dresses from you. (click-replace: &quot;hoodies and dresses&quot;) [shit] The bikies love it.
 
 
 One night Jodi organises a birthday party for one of her friends (click-replace: &quot;friends&quot;) [clients] (click-replace: &quot;clients&quot;) [suppliers]. Let&#39;s call him D. For Dickhead.
 
 &lt;img src=&quot;img/party2.png&quot; alt=&quot;party girls in limo&quot; /&gt;
 
-Back at D&#39;s apartment after a typical Sunday (click-replace: &quot;Sunday&quot;) [strippers&#39; night out] at Love Machine, D is hellbent on getting Karla to fuck him. With Jodi unofficially acting as his pimp, (click-append: &quot;his pimp&quot;) [, which is something she would never even admit to herself] bringing him girls he might like, or whom he might find easy, Karla is simply sport. D won&#39;t let us leave until we each have a drink. He&#39;s spiked them all with G, which Jodi loves and I hate. Karla is freaking out, but quietly. You never know what a scum-of-the-earth wanna-be baller (click-replace: &quot;baller&quot;) [gangster] (click-replace: &quot;gangster&quot;) [Romeo] might do. 
+Back at D&#39;s apartment after a typical Sunday (click-replace: &quot;Sunday&quot;) [strippers&#39; night out] at Love Machine, D is hellbent on getting Karla to fuck him. With Jodi unofficially acting as his pimp, (click-append: &quot;his pimp&quot;) [, which is something she would never even admit to herself] bringing him girls he might like, or whom he might find easy, Karla is simply sport. D won&#39;t let us leave until we each have a drink. He&#39;s spiked them all with G, which Jodi loves and you hate. Karla is freaking out, but quietly. You never know what a scum-of-the-earth wanna-be baller (click-replace: &quot;baller&quot;) [gangster] (click-replace: &quot;gangster&quot;) [Romeo] might do. 
 
 These are the kinds of guys who bolt the doors from the inside and then hide the keys.
-
 
 You might ask, and this is a pertinant question, Why the fuck put yourself in danger like that? It&#39;s partly to please Jodi. (Click-append: &quot;It&#39;s partly to please Jodi.&quot;  [But again: Why the fuck would you want a friend like that?] Also, Sunday nights are a gamble with high stakes. You never know whether you&#39;ll make it til sunrise, whether you&#39;ll meet an elusive someone or even how you&#39;ll get home.
 
@@ -140,25 +139,19 @@ You might ask, and this is a pertinant question, Why the fuck put yourself in da
 
 On this particular Sunday night, (click-append: &quot;night&quot;) [, now technically Monday morning] you decide to play hero to Karla by downing her drink as well as yours. In the end, you and Karla made it out of their unmolested, and it felt like a win at the time. You wonder if Jodi ended up giving D a booby prize in exchange for a pipe later.
 
-
-
 Where&#39;s your head at? Your phone&#39;s still ringing! You&#39;d better [[slide right to answer]].</tw-passagedata><tw-passagedata pid="7" name="call X" tags="" position="276,264" size="100,100">Just recently Jade asked X how to install chickenwire fencing to prevent her cat from escaping off of her balcony. 
-
 
 Who else would rock up at her house on a Friday night to offer chickenwire installation?
 
-
 You call X, demanding that he explain himself.
-
 
 He denies (click-replace: &quot;denies&quot;) [lies about] being at Jade&#39;s house.
 
-
 Later that night, when you pack up my suitcase to head to another club, the bouncer describes how a guy who meets the same physical description as X shows up at the club, asking for you by name, like a creepy stalker. To protect your privacy, the bouncer said you weren&#39;t there.
 
+&lt;img src=&quot;img/rackjen.png&quot; alt=&quot;clothes for sale&quot; /&gt;
 
 You confront X about him showing up at your work. Of course he denies (click-replace: &quot;denies&quot;) [lies about] checking up on your whereabouts (click-append: &quot;checking up on your whereabouts&quot;) [, although later he will confess to the chickenwire and the stalking in therapy]. 
-
 
 [[The next day...]]</tw-passagedata><tw-passagedata pid="8" name="The next day..." tags="" position="191,464" size="100,100">X doesn&#39;t want you to sell clothing at the clubs that night. He phones you as you drive away with your bags packed for the night. You&#39;re beginning to feel suffocated; you couldn&#39;t get out of the apartment quick enough.
 
