--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ tw-story {
 
 </style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="ignore it" tags="" position="557,294" size="100,100">You don&#39;t want to miss out on any sales or risk [[having something stolen]]. You train your eye on the blonde with the dreadlocks who keeps showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for.
 
-&lt;img src=&quot;img/bikinis.jpg&quot; alt=&quot;lots of sparkly bikinis&quot; /&gt;
+&lt;img class=&quot;passage-image&quot; src=&quot;img/bikinis.jpg&quot; alt=&quot;lots of sparkly bikinis&quot; /&gt;
 
 Most of the girls are honest (with you at least), but there&#39;s always one or two who feel entitled to everyone else&#39;s stuff. (click-append: &quot;stuff&quot;) [: g-strings, costumes, eyeliner, lipstick, money, partners]
 
@@ -147,7 +147,7 @@ You call X, demanding that he explain himself.
 
 He denies (click-replace: &quot;denies&quot;) [lies about] being at Jade&#39;s house.
 
-Later that night, when you pack up my suitcase to head to another club, the bouncer describes how a guy who meets the same physical description as X shows up at the club, asking for you by name, like a creepy stalker. To protect your privacy, the bouncer said you weren&#39;t there.
+Later that night, when you pack up your suitcase to head to another club, the bouncer describes how a guy who meets the same physical description as X shows up at the club, asking for you by name, like a creepy stalker. To protect your privacy, the bouncer said you weren&#39;t there.
 
 &lt;img src=&quot;img/rackjen.png&quot; alt=&quot;clothes for sale&quot; /&gt;
 
@@ -170,6 +170,7 @@ What is the possibility that he tampered with the car to keep you at home?
 
 If you weren&#39;t scared before, maybe you should be now.
 
+&lt;img src=&quot;img/melb-night.jpg&quot; alt=&quot;Melbourne night photo&quot; /&gt;
 
 You pull up to Showgirls Bar 20 with a flat tire.
 
@@ -203,10 +204,15 @@ He leaves without a Coke because there was no Coke in the fridge and it was neve
 He&#39;s doubled his antipsychotic meds on his own accord, not under doctor&#39;s supervision. 
 
 
-[[Peacetime is over.]]</tw-passagedata><tw-passagedata pid="12" name="Peacetime is over." tags="" position="539,615" size="100,100">All you want to do is get through each day, one day at a time, each day getting closer to your goals. You have a secret shop in your rental apartment laden wall-to-wall, floor-to-ceiling, with gorgeous little nothings, and you allow the dancers (click-replace: &quot;dancers&quot;) [glamour models] (click-replace: &quot;glamour models&quot;) [escorts] (click-append: &quot;escorts&quot;) [and their friends] (click-replace: &quot;friends&quot;) [kids] to come over to shop any time of day / night. First, you&#39;ll pay your debts, then you&#39;ll buy yourself options. (click-replace: &quot;options&quot;) [freedom] When girls come over, you make X leave because he scares them. (click-replace: &quot;scares&quot;) [says innappropriate things to]
+[[Peacetime is over.]]</tw-passagedata><tw-passagedata pid="12" name="Peacetime is over." tags="" position="539,615" size="100,100">&lt;img src=&quot;img/secretshop.png&quot; alt=&quot;secret shop&quot; /&gt;
+
+All you want to do is get through each day, one day at a time, each day getting closer to your goals. You have a secret shop in your rental apartment laden wall-to-wall, floor-to-ceiling, with gorgeous little nothings, and you allow the dancers (click-replace: &quot;dancers&quot;) [glamour models] (click-replace: &quot;glamour models&quot;) [escorts] (click-append: &quot;escorts&quot;) [and their friends] (click-replace: &quot;friends&quot;) [kids] to come over to shop any time of day / night. First, you&#39;ll pay your debts, then you&#39;ll buy yourself options. (click-replace: &quot;options&quot;) [freedom] When girls come over, you make X leave because he scares them. (click-replace: &quot;scares&quot;) [says innappropriate things to]
 
 
 You are all objects to him.
+
+
+&lt;img src=&quot;img/catnap.png&quot; alt=&quot;cat nap sleep mask&quot; /&gt;
 
 
 You&#39;re working yourself to exhaustion but work is a pleasure compared to spending time with X. You visit his therapist with him often, and each time he admits to wrongdoing and promises to make enduring changes, but the promises are as lasting (click-replace: &quot;lasting&quot;) [ephemeral] as the cigarettes he smokes. 
