--- a/index.html
+++ b/index.html
@@ -271,8 +271,9 @@ Jade asks him to leave.
 He won&#39;t leave.
 
 
-Today, against her better judgment, Jade lets X in.
+Today, against her better judgment, and because she&#39;s too tired to argue any more, Jade lets X in so he can install the chickenwire for her cat.
 
+&lt;img src=&quot;cat.png&quot; alt=&quot;cat on couch&quot; /&gt;
 
 X insists he has something urgent to tell her. A secret about you. (Click-replace: &quot;A secret about you&quot;) [Once inside her apartment, he tells Jade that this is an intervention on your behalf, that you are an ice addict, But shhhh...don&#39;t tell anyone because it&#39;s our little secret]
 
