--- a/index.html
+++ b/index.html
@@ -46,23 +46,28 @@ Most of the girls are honest (click-append: &quot;honest&quot;) [ with you at le
 
 Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="2" name="slide right to answer" tags="" position="410,276" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
 
+
 &quot;Can you please try those on over your G?&quot; you call out to Bambi on Stilts. She stares blankly, not comprehending the basic rules dressing room etiquette.
 
-&lt;img src=&quot;img/rackclub.png&quot; alt=&quot;clothing rack at Goldfingers with sparkly outfits&quot; /&gt;
+&lt;img src=&quot;img/shoes.png&quot; alt=&quot;stripper shoes&quot; /&gt;
 
 &quot;Sorry,&quot; you say to Jade. &quot;What&#39;s up?&quot;
 
+
 &quot;Someone just rang me on the intercom telling me they&#39;re here to install chickenwire fencing,&quot; she says. &quot;I&#39;m scared.&quot;
+
 
 &quot;Who is it?&quot;
 
+
 &quot;They won&#39;t say.&quot;
+
 
 &quot;Call the police.&quot;
 
+
 &quot;Can&#39;t. I&#39;m holding.&quot;
 
-&lt;img src=&quot;img/cocaine.jpg&quot; alt=&quot;phone with lines of cocaine on top&quot; /&gt;
 
 You tell her that it&#39;s probably just X, your erstwhile boyfriend. 
 
