--- a/index.html
+++ b/index.html
@@ -225,15 +225,15 @@ He leaves without a Coke because there was not a Coke in the fridge and it was n
 He&#39;s doubled his antipsychotic meds on his own accord, not under doctor&#39;s supervision. 
 
 
-[[Peacetime is over.]]</tw-passagedata><tw-passagedata pid="12" name="Peacetime is over." tags="" position="539,615" size="100,100">&lt;img src=&quot;img/boxing.png&quot; alt=&quot;girl with punching bag&quot; /&gt;
+[[Peacetime is over.]]
+
+&lt;img src=&quot;img/boxing.png&quot; alt=&quot;girl with punching bag&quot; /&gt;</tw-passagedata><tw-passagedata pid="12" name="Peacetime is over." tags="" position="539,615" size="100,100">&lt;img src=&quot;img/secretshop.png&quot; alt=&quot;secret shop&quot; /&gt;
 
 All you want to do is get through each day, one day at a time, each day getting closer to your goals. You have a secret shop in your rental apartment laden wall-to-wall, floor-to-ceiling, with gorgeous little nothings, and you allow the dancers (click-replace: &quot;dancers&quot;) [glamour models] (click-replace: &quot;glamour models&quot;) [escorts] (click-append: &quot;escorts&quot;) [and their friends] (click-replace: &quot;friends&quot;) [kids] to come over to shop any time of day / night. First, you&#39;ll pay your debts, then you&#39;ll buy yourself options. (click-replace: &quot;options&quot;) [freedom] When girls come over, you make X leave because he scares them. (click-replace: &quot;scares&quot;) [says innappropriate things to]
 
-&lt;img src=&quot;img/secretshop.png&quot; alt=&quot;secret shop&quot; /&gt;
 
 You are all objects to him.
 
-&lt;img src=&quot;img/catnap.png&quot; alt=&quot;cat nap sleep mask&quot; /&gt;
 
 You&#39;re working yourself to exhaustion but work is a pleasure compared to spending time with X. You visit his therapist with him often, and each time he admits to wrongdoing and promises to make enduring changes, but the promises are as lasting (click-replace: &quot;lasting&quot;) [ephemeral] as the cigarettes he smokes. 
 
@@ -317,8 +317,9 @@ Do you [[go back to your apartment with X]] that night or do you [[beg him to st
 
 Apologies for bringing you here under false pretence. You navigated here under the illusion of choice, or perhaps a misguided hope of reconciliation, but the reality is that the stage is set for disaster. It&#39;s only a matter of time, so you better stave off chaos and [[beg him to stay at his mum&#39;s house]]. </tw-passagedata><tw-passagedata pid="15" name="beg him to stay at his mum&#39;s house" tags="" position="764,761" size="100,100">You need time to think. To plot a way out. How can you extricate your life from his when you are under 24/7 watch? You&#39;re exhausted.
 
+&lt;img src=&quot;img/catnap.png&quot; alt=&quot;cat nap sleep mask&quot; /&gt;
 
-Your time in Australia is about to be cut short. X has phoned immigration to notify them that your relationship has broken down. If he can&#39;t have you then he doesn&#39;t want you here. He&#39;d rather kill you than see you with anyone else. If you&#39;re lucky you&#39;ll have another 60 days to make money and pack up your life.
+Your time in Australia could be cut short. X has phoned immigration to notify them that your relationship has broken down. If he can&#39;t have you then he doesn&#39;t want you here. He&#39;d rather kill you than see you with anyone else. If you&#39;re lucky you&#39;ll have another 60 days to make money and pack up your life.
 
 
 In the meantime, you feel imprisoned in your small apartment, as if the walls have eyes and ears. Even when you&#39;re alone you are not. This isn&#39;t paranoia: it&#39;s coercive control.
