fix click replace

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ You must&#39;ve been blinded. (click-append: &quot;blinded&quot;) [by love, by s
 
 The next day... (click-append: &quot;The next day...&quot;) [ you insist he see his doctor, who doubles his anti-psychotic medication.] 
 
-You&#39;re hopeful that life will stabilise now. And it does. [[For two weeks.]]</tw-passagedata><tw-passagedata pid="11" name="For two weeks." tags="" position="402,615" size="100,100">Nearly two weeks after the suspicious flat tire, you notice X driving past your apartment multiple times each day. Although he&#39;s working across town, he pops in unexpectedly, supposedly for a can of Coke. It would almost be funny, how winded he is after clearly racing up four flights of stairs, throwing open the front door without so much as a hello / a text / a knock. 
+You&#39;re hopeful that life will stabilise now. And it does. [[For two weeks.]]</tw-passagedata><tw-passagedata pid="11" name="For two weeks." tags="" position="402,615" size="100,100">Nearly two weeks after the suspicious flat tire, you notice X driving past your apartment multiple times each day. Although he&#39;s working across town, he pops in unexpectedly, supposedly for a can of Coke. It would almost be funny, how winded he is after clearly racing up four flights of stairs, throwing open the front door without so much as a hello. (click-replace: &quot;hello&quot;) [text] (click-replace: &quot;text&quot;) [knock]  
 
 
 Except that it&#39;s not funny because he&#39;s looking in every room for a stowaway. (click-replace: &quot;a stowaway&quot;) [an imaginary lover] (click-replace: &quot;an imaginary lover&quot;) [an invisible cuckhold]
@@ -235,7 +235,7 @@ All you want to do is get through each day, one day at a time, each day getting 
 You are all objects to him.
 
 
-You&#39;re working yourself to exhaustion but work is a pleasure compared to spending time with X. You visit his therapist with him often, and each time he admits to wrongdoing and promises to make enduring changes, but the promises are as lasting (click-replace: &quot;lasting&quot;) [ephemeral] as the cigarettes he smokes. 
+You&#39;re working yourself to exhaustion but work is a pleasure compared to spending time with X. You visit his therapist with him often, and each time he admits to wrongdoing and promises to make enduring changes, but the promises are as lasting as the cigarettes he smokes. 
 
 
 He accuses you of having an affair and of being on drugs. He says that you never even loved him, that you were only ever using him for a visa. (click-append: &quot;using him for a visa.&quot;) [ His logic implies that you had sex with him hundreds of times (click-append: &quot;times&quot;) [, sometimes three or four times a day,] (click-append: &quot;a day,&quot;) [ submitting to all of his perversions] (click-append: &quot;perversions&quot;) [ (urination, anal, choking, bondage)]  to trick him into wanting to marry you.]
