--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@ tw-story {
 
 </style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="ignore it" tags="" position="557,294" size="100,100">You don&#39;t want to miss out on any sales or risk [[having something stolen]]. You train your eye on the blonde with the dreadlocks who keeps showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for.
 
-&lt;img src=&quot;rackgallery.png&quot; alt=&quot;clothes rack at strip club&quot; /&gt;
+&lt;img src=&quot;rackgallery.png&quot;/&gt;
 
 Most of the girls are honest (click-append: &quot;honest&quot;) [ with you at least,] but there&#39;s always one or two who feel entitled to everyone else&#39;s stuff. (click-append: &quot;stuff&quot;) [: g-strings, costumes, eyeliner, lipstick, money, partners]
 
-&lt;img src=&quot;sparkly.png&quot; alt=&quot;sparkly costumes&quot; /&gt;
+&lt;img src=&quot;sparkly.png&quot; /&gt;
 
 Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="2" name="slide right to answer" tags="" position="410,276" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
 
