--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@ tw-story {
 
 </style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="ignore it" tags="" position="557,294" size="100,100">You don&#39;t want to miss out on any sales or risk [[having something stolen]]. You train your eye on the blonde with the dreadlocks who keeps showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for.
 
-&lt;img src=&quot;rackgallery.png&quot;/&gt;
+&lt;img src=&quot;img/rackgallery.png&quot; alt=&quot;clothing rack with stripper outfits&quot; /&gt;
 
 Most of the girls are honest (click-append: &quot;honest&quot;) [ with you at least,] but there&#39;s always one or two who feel entitled to everyone else&#39;s stuff. (click-append: &quot;stuff&quot;) [: g-strings, costumes, eyeliner, lipstick, money, partners]
 
-&lt;img src=&quot;sparkly.png&quot; /&gt;
+&lt;img src=&quot;img/sparkly.png&quot; alt=&quot;clothing rack with sparkly outfits&quot; /&gt;
 
 Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="2" name="slide right to answer" tags="" position="410,276" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
 
@@ -385,7 +385,7 @@ Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to
 [(enchant:?passage,(b4r:&quot;double&quot;)+(b4r-colour:white))&#39;&#39;[[THE CHICKENWIRE INCIDENT]]&#39;&#39;]
 
 
-</tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,127" size="100,100">It is 8 or 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. 
+</tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,128" size="100,100">It is 8 or 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. 
 
 &lt;img src=&quot;img/rack6.png&quot; alt=&quot;clothing rack with sparkly outfits&quot; /&gt;&lt;img src=&quot;img/rack4.png&quot; alt=&quot;clothing rack with colourful outfits&quot; /&gt;
 
