--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Your phone rings again. It must be an emergency. You [[slide right to answer]].<
 
 &quot;Can you please try those on over your G?&quot; you call out to Bambi on Stilts. She stares blankly, not comprehending the basic rules dressing room etiquette.
 
-&lt;img src=&quot;img/shoes.png&quot; alt=&quot;stripper shoes&quot; /&gt;
+&lt;img src=&quot;img/heels.png&quot; alt=&quot;stripper shoes&quot; /&gt;
 
 &quot;Sorry,&quot; you say to Jade. &quot;What&#39;s up?&quot;
 
