--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@ Do you [[panic because of what happened the other week]] or offer to [[call X]] 
 
 Your edges are blurred, a bit warm and fuzzy, so you shake off X&#39;s possessiveness and continue dancing, trying not to let his paranoia kill the vibe. 
 
-&lt;img src=&quot;purple.png&quot; alt=&quot;blurry purple dress&quot; /&gt;
+&lt;img src=&quot;img/purple.png&quot; alt=&quot;blurry purple dress&quot; /&gt;
 
 Next minute X is professing his undying love to Jade (who looks nothing like you) and calling her by your pet names. 
 
 &quot;You mean you love Jenny,&quot; Jade says to X.
 
-&lt;img src=&quot;purpleblurs.png&quot; alt=&quot;blurry girls&quot; /&gt;
+&lt;img src=&quot;img/purpleblurs.png&quot; alt=&quot;blurry girls&quot; /&gt;
 
 You&#39;re not jealous because his confusion and disorientation is obvious. X is existing in an alternate reality, where every woman is a reflection of you, and you are reflected in every woman&#39;s actions, lit up by multi-coloured strobing lights. 
 
 You start to fear for your own safety. (click-append: &quot;You start to fear for your own safety&quot;) [ (after all, he threatened to kill you if you ever left him for someone else)] In X&#39;s eyes you are every single woman who is making out with any man or woman on the dance floor. You&#39;re gyrating against hundreds of bodies all at once, texting scores of potential lovers, your flesh multiplied and embodied by every pulsing body in the venue. You are the hyper-sexual adulteress of his nightmares in every reality except the one you inhabit.
 
-&lt;img src=&quot;tramp2.png&quot; alt=&quot;girls in a row at Tramp&quot; /&gt;
+&lt;img src=&quot;img/tramp2.png&quot; alt=&quot;girls in a row at Tramp&quot; /&gt;
 
 This is bullshit. You should [[go to the bathroom]] to take a break from this insane convergence of dimensions. 
 
@@ -217,7 +217,7 @@ Except that it&#39;s not funny because he&#39;s looking in every room for a stow
 
 And there is none to be found because there is no one else and there never was.
 
-&lt;img src=&quot;comp.png&quot; alt=&quot;girl using computer on bed&quot; /&gt;
+&lt;img src=&quot;img/comp.png&quot; alt=&quot;girl using computer on bed&quot; /&gt;
 
 He leaves without a Coke because there was not a Coke in the fridge and it was never about refreshments anyway.
 
@@ -227,9 +227,11 @@ He&#39;s doubled his antipsychotic meds on his own accord, not under doctor&#39;
 
 [[Peacetime is over.]]
 
-&lt;img src=&quot;img/boxing.png&quot; alt=&quot;girl with punching bag&quot; /&gt;</tw-passagedata><tw-passagedata pid="12" name="Peacetime is over." tags="" position="539,615" size="100,100">&lt;img src=&quot;img/secretshop.png&quot; alt=&quot;secret shop&quot; /&gt;
+&lt;img src=&quot;img/boxing.png&quot; alt=&quot;girl with punching bag&quot; /&gt;</tw-passagedata><tw-passagedata pid="12" name="Peacetime is over." tags="" position="539,615" size="100,100">All you want to do is get through each day, one day at a time, each day getting closer to your goals.
 
-All you want to do is get through each day, one day at a time, each day getting closer to your goals. You have a secret shop in your rental apartment laden wall-to-wall, floor-to-ceiling, with gorgeous little nothings, and you allow the dancers (click-replace: &quot;dancers&quot;) [glamour models] (click-replace: &quot;glamour models&quot;) [escorts] (click-append: &quot;escorts&quot;) [and their friends] (click-replace: &quot;friends&quot;) [kids] to come over to shop any time of day / night. First, you&#39;ll pay your debts, then you&#39;ll buy yourself options. (click-replace: &quot;options&quot;) [freedom] When girls come over, you make X leave because he scares them. (click-replace: &quot;scares&quot;) [says innappropriate things to]
+&lt;img src=&quot;img/shop.png&quot; alt=&quot;secret shop&quot; /&gt;
+
+You have a secret shop in your rental apartment laden wall-to-wall, floor-to-ceiling, with gorgeous little nothings, and you allow the dancers (click-replace: &quot;dancers&quot;) [glamour models] (click-replace: &quot;glamour models&quot;) [escorts] (click-append: &quot;escorts&quot;) [and their friends] (click-replace: &quot;friends&quot;) [kids] to come over to shop any time of day / night. First, you&#39;ll pay your debts, then you&#39;ll buy yourself options. (click-replace: &quot;options&quot;) [freedom] When girls come over, you make X leave because he scares them. (click-replace: &quot;scares&quot;) [says innappropriate things to]
 
 
 You are all objects to him.
@@ -261,7 +263,7 @@ But getting back to the [[chickenwire]]...
 
 </tw-passagedata><tw-passagedata pid="13" name="chickenwire" tags="" position="674,616" size="100,100">When you were little your mother put up chickenwire fencing to keep out the rattlesnakes that slithered into your backyard, but which could not keep out the wild coyotes. You have a visceral memory of running your hands along the chickenwire, one hand on either side of the fencing, hands clasped in prayer, sliding across from post to post, again and again. How the thin braids of metal interrupted the sticky connection of palm on palm, where love line meets love line, creating additional friction that bordered on burn.
 
-&lt;img src=&quot;snake.png&quot; alt=&quot;girl wearing a carpet python&quot; /&gt;
+&lt;img src=&quot;img/snake.png&quot; alt=&quot;girl wearing a carpet python&quot; /&gt;
 
 
 Today X shows up at Jade&#39;s apartment with a roll of chickenwire.
@@ -278,7 +280,7 @@ He won&#39;t leave.
 
 Today, against her better judgment, and because she&#39;s too tired to argue any more, Jade lets X in so he can install the chickenwire for her cat.
 
-&lt;img src=&quot;cat.png&quot; alt=&quot;cat on couch&quot; /&gt;
+&lt;img src=&quot;img/cat.png&quot; alt=&quot;cat on couch&quot; /&gt;
 
 X insists he has something urgent to tell her. A secret about you. (Click-replace: &quot;A secret about you&quot;) [Once inside her apartment, he tells Jade that this is an intervention on your behalf, that you are an ice addict, But shhhh...don&#39;t tell anyone because it&#39;s our little secret]
 
@@ -336,7 +338,7 @@ He begs you to give him one more chance. (click-replace: &quot;He begs you to gi
 
 [[But all of his promises are dandelions in the wind.]]
 
-&lt;img class=&quot;passage-image&quot; src=&quot;dandelions.jpg&quot; alt=&quot;dandelions blowing in the wind&quot; /&gt;</tw-passagedata><tw-passagedata pid="17" name="But all of his promises are dandelions in the wind." tags="" position="1127,765" size="100,100">It&#39;s not just one thing. It is many repeated variations on the same themes.
+&lt;img class=&quot;passage-image&quot; src=&quot;img/dandelions.jpg&quot; alt=&quot;dandelions blowing in the wind&quot; /&gt;</tw-passagedata><tw-passagedata pid="17" name="But all of his promises are dandelions in the wind." tags="" position="1127,765" size="100,100">It&#39;s not just one thing. It is many repeated variations on the same themes.
 
 
 * Popping In (click-append: &quot;Popping In&quot;) [—as in &quot;popping in&quot; to pick up a non-functional iPad when he&#39;s meant to be at work.] (click-replace: &quot;a non-functional iPad&quot;) [his passport] (click-replace: &quot;meant to be at work&quot;) [sworn to give you space for a few days and is not actually planning international travel] (click-append: &quot;international travel&quot;) [. Other definitions of &quot;popping in&quot; include...] (click-append: &quot;include&quot;) [ spying on you through the gap under the front door] (click-append: &quot;front door&quot;) [ and pretending to have dropped a non-specific something on the floor]
@@ -364,9 +366,9 @@ So you would expect after two-and-a-half years of abuse drawn out through court 
 
 Instead you&#39;re a puddle after the rain.
 
-&lt;img src=&quot;baby.png&quot; alt=&quot;toddler looking into puddle&quot; /&gt;</tw-passagedata><tw-passagedata pid="20" name="You&#39;ve been stuck in a loop for so long." tags="" position="863,528" size="100,100">But now you are in hyper-drive, ready to fight for the sub-three kilo person who has total faith in your ability to nurture and protect him, who deserves a life free from violence. 
+&lt;img src=&quot;img/baby.png&quot; alt=&quot;toddler looking into puddle&quot; /&gt;</tw-passagedata><tw-passagedata pid="20" name="You&#39;ve been stuck in a loop for so long." tags="" position="863,528" size="100,100">But now you are in hyper-drive, ready to fight for the sub-three kilo person who has total faith in your ability to nurture and protect him, who deserves a life free from violence. 
 
-&lt;img src=&quot;babyblurry.png&quot; alt=&quot;mum and baby cuddling&quot; /&gt;
+&lt;img src=&quot;img/babyblurry.png&quot; alt=&quot;mum and baby cuddling&quot; /&gt;
 
 You battle for your rights, reading the fine print. (click-append: &quot;fine print&quot;) [, demanding explanations] (click-append: &quot;demanding explanations&quot;) [, getting everything in writing] 
 
@@ -387,7 +389,8 @@ Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to
 
 </tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,128" size="100,100">It is 8 or 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. 
 
-&lt;img src=&quot;img/rack6.png&quot; alt=&quot;clothing rack with sparkly outfits&quot; /&gt;&lt;img src=&quot;img/rack4.png&quot; alt=&quot;clothing rack with colourful outfits&quot; /&gt;
+&lt;img src=&quot;img/rack6.png&quot; alt=&quot;clothing rack with sparkly outfits&quot; /&gt;
+&lt;img src=&quot;img/rack4.png&quot; alt=&quot;clothing rack with colourful outfits&quot; /&gt;
 
 In those days the money you earned was covered in sweat and cocaine. (click-append: &quot;sweat and cocaine.&quot;) [ Isn&#39;t all money, really?] Tired of exploiting yourself, you tapped into the niche dancewear market instead. Your goal was not to take advantage of the girls, but to provide a service. You played stylist. (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime]
 
