--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ Instead you&#39;re a puddle after the rain.
 
 &lt;img src=&quot;img/baby.png&quot; alt=&quot;toddler looking into puddle&quot; /&gt;</tw-passagedata><tw-passagedata pid="20" name="You&#39;ve been stuck in a loop for so long." tags="" position="863,528" size="100,100">But now you are in hyper-drive, ready to fight for the sub-three kilo person who has total faith in your ability to nurture and protect him, who deserves a life free from violence. 
 
-&lt;img src=&quot;img/babyblurry.png&quot; alt=&quot;mum and baby cuddling&quot; /&gt;
+&lt;img src=&quot;img/baby1.png&quot; alt=&quot;mum and baby cuddling&quot; /&gt;
 
 You battle for your rights, reading the fine print. (click-append: &quot;fine print&quot;) [, demanding explanations] (click-append: &quot;demanding explanations&quot;) [, getting everything in writing] 
 
