--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@ What is the possibility that he tampered with the car to keep you at home?
 
 If you weren&#39;t scared before, maybe you should be now.
 
-&lt;img src=&quot;img/melb-night.jpg&quot; alt=&quot;Melbourne night photo&quot; /&gt;
+&lt;img src=&quot;img/gallery.jpg&quot; alt=&quot;off of King Street&quot; /&gt;
 
-You pull up to Showgirls Bar 20 with a flat tire.
+You pull up to one of the clubs with a flat tire.
 
 
 Two minutes later... (click-append: &quot;Two minutes later...&quot;) [ X parks his car behind yours on King Street, a cop car behind him. You hadn&#39;t noticed him following you all the way there.]
