--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ You confront X about him showing up at your work. Of course he denies (click-rep
 Do you turn around and [[drive home]] or [[keep driving]]?</tw-passagedata><tw-passagedata pid="9" name="drive home" tags="" position="116,614" size="100,100">Home is where he wants you because that&#39;s where he thinks a woman belongs. In the kitchen, cooking. In the bathroom, cleaning. In the bedroom, tarted up in fishnet stockings and crotchless knickers, fucking, sucking. 
 
 
-And yet you&#39;re the one paying most of the rent and most of the bills, because he&#39;s on disability. (click-append: &quot;disability&quot;) [, even though his claimed disability doesn&#39;t prevent him from taking on high-paying cash jobs] (click-replace: &quot;cash&quot;) [untaxed] On second thought, who&#39;s going to pay the rent if you turn the car around? You can always call RACV in between clubs so [[keep driving]]. </tw-passagedata><tw-passagedata pid="10" name="keep driving" tags="" position="267,614" size="100,100">Besides, isn&#39;t it odd that he would have noticed that something was wrong with the car?
+And yet you&#39;re the one paying most of the rent and most of the bills, because he&#39;s on disability. (click-append: &quot;disability&quot;) [, even though his claimed disability doesn&#39;t prevent him from taking on high-paying cash jobs] (click-replace: &quot;cash&quot;) [untaxed] On second thought, who&#39;s going to pay the rent if you turn the car around? You can always call RACV in between clubs so [[keep driving]]. </tw-passagedata><tw-passagedata pid="10" name="keep driving" tags="" position="267,615" size="100,100">Besides, isn&#39;t it odd that he would have noticed that something was wrong with the car?
 
 
 What is the possibility that he tampered with the car to keep you at home?
@@ -190,7 +190,7 @@ What is the possibility that he tampered with the car to keep you at home?
 
 If you weren&#39;t scared before, maybe you should be now.
 
-&lt;img src=&quot;img/gallery.jpg&quot; alt=&quot;off of King Street&quot; /&gt;
+&lt;img src=&quot;img/gallery.png&quot; alt=&quot;off of King Street&quot; /&gt;
 
 You pull up to one of the clubs with a flat tire.
 
